# dissertation

./: .gitignore  Cargo.toml  Overleaf Links.md  README.md  example.txt  ip-rand-log.out  ip-tense-log.out  literature.md  problem.md
int-prog/: requirements.txt
int-prog/src/: lin.py  main.py  quad1.py  quad2.py
jobs/: ip-rand-big.sh  ip-rand.sh  ip-ring.sh  ip-tense.sh  lahc.sh  naive.sh
py/: requirements.txt
py/src/: graphs.py  int-prog.py  sig.py
report/: stats.ods
report/project_plan/: Makefile  ProjectPlan.bib  ProjectPlan.tex  gantt.eps
src/: hill_climb.rs  lahc.rs  lib.rs  metrics.rs
weddings/: complete-suite.txt  const-table-size.txt  hill-solve_complete-suite.csv  hill-solve_const-table-size.csv  hill-solve_rand-suite.csv  hill-solve_ring-suite.csv  hill-solve_tense-suite.csv  int-prog_complete-suite.csv  int-prog_rand-suite.csv  int-prog_ring-suite.csv  int-prog_tense-suite.csv  lahc-solve_complete-suite.csv  lahc-solve_const-table-size__term0.02.csv  lahc-solve_rand-suite.csv  lahc-solve_ring-suite.csv  lahc-solve_tense-suite.csv  lahc_ring-suite.csv  main_ring-suite.csv  rand-suite.txt  rand_suite.txt  ring-suite.txt  ring_suite.csv  ring_suite.txt  tense-suite.txt
weddings/complete-suite/: complete_003_003_1732138090.txt  complete_007_007_1773709613.txt  complete_010_010_2788392332.txt  complete_012_012_331179337.txt  complete_014_014_2580785673.txt
weddings/old-csvs/: hill-solve_complete-suite.csv  hill-solve_ring-suite.csv  hill-solve_tense-suite.csv  int-prog_complete-suite.csv  int-prog_ring-suite.csv  lahc-solve_ring-suite.csv
(+63 files in other folders)
