[package]
name = "dissertation"
version = "0.1.0"
authors = ["hypen-emdash <joffe.daniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.21"
anyhow = "1.0.38"
